# the-stacks

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.docling  LICENSE  Makefile  README.md  docker-compose.ddb-5176.yml  docker-compose.docling.yml  docker-compose.prod.yml  docker-compose.streaming.yml  docker-compose.yml  go.mod  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyrightconfig.json  tsconfig.json
.claude/: settings.json
.focus/: config.yaml  index.json
.githooks/: pre-commit  pre-push
.serena/: project.yml
.specify/: feature.json
.v2/: README.md
app/: app.css  root.tsx  routes.ts
apps/ml/: Dockerfile  pyproject.toml
apps/ml/src/ml/: main.py  models.py  schemas.py
apps/ml/tests/: test_embed.py  test_readiness.py  test_rerank.py
backlog/: config.yml
designs/: the-stacks-corpus.md  the-stacks.md
docs/: ddb-saved-html-import-plan.md  deployment.md  importer-parity.md  langgraph-boundary.md  phb-ocr-timeout.md  rag-rearchitecture-plan.md  worktree-operating-model.md
e2e/: ikis-flow.ts
scripts/: check-adrs.mjs  check-adrs.test.mjs  check-boundaries.mjs  check-courses.mjs  check-spec-artifacts.mjs  check-spec-artifacts.test.mjs  check-startup-env.mjs  check-version-bump.mjs  check-version-bump.test.mjs  etl_live_smoke.py  eval_embeddings.py  mint-worktree-env.mjs  ocr-worker.ts  route-preflight.sh  smoke-public.sh  smoke.sh  stop-gates.mjs  sync-review-retrievability.ts  worktree-env-lib.mjs  worktree-env-lib.test.mjs
test/: fixtures.test.js  (+1 more)
(+604 files in other folders)
